--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -2475,7 +2475,7 @@
         "  if columna.startswith('obs'):#vemos aquellas columnas que sean observaciones\n",
         "    ruido_medio=df_data_spectra[columna].mean()\n",
         "    df_data_spectra[columna]=df_data_spectra[columna] - ruido_medio#aqui le restamos a cada columna el ruido medio para centrarlas\n",
-        "#con esto tendriamos el dataframe con datos nuevos, osea con lo pedido"
+        "#con esto tendriamos el dataframe con datos cambiados, osea con lo pedido"
       ]
     },
     {
